env:add boottswatch, configure sass

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Tous anti-Covid" />
+    <meta name="keywords" content="anti-covid,gouvernement" />
+    <meta name="author" content="Cadot Michael" />
+    <meta name="copyright" content="Cadot Michael" />
+    <meta name="robots" content="index" />
+    <meta name="Subject" content="Accueil">
+    <meta name="Identifier-Url" content="study1.cadot.info/index.php">
+    <meta name="Reply-To" content="webmestre@cadot.info">
+    <meta name="Category" content="virus,protection">
+    <meta name="description" content="Le Gouvernement agit pour vous." />
+    <link rel="icon" type="image/png" href="favicon.png" />
     {% block stylesheets %}
     {{ encore_entry_link_tags('app') }}
     {% endblock %}
