--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,11 @@
 </head>
 
 <body>
-    {% block body %}{% endblock %}
-</body>
+    <div class="container">
+        <div class="row">
+            {% block body %}{% endblock %}
+        </div>
+    </div>
+</body </body>
 
 </html>
