feat:actualite and admin

--- a/templates/actualite/edit.html.twig
+++ b/templates/actualite/edit.html.twig
@@ -1,13 +1,16 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
 {% block title %}Edit Actualite{% endblock %}
 
 {% block body %}
-    <h1>Edit Actualite</h1>
+<h1>Edit Actualite</h1>
+<div class="row">
+    <div class="col-12">
+        {{ include('actualite/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    {{ include('actualite/_form.html.twig', {'button_label': 'Update'}) }}
+        <a class="btn btn-primary" href="{{ path('actualite_index') }}">Revenir à la liste</a>
 
-    <a href="{{ path('actualite_index') }}">back to list</a>
-
-    {{ include('actualite/_delete_form.html.twig') }}
+        {{ include('actualite/_delete_form.html.twig') }}
+    </div>
+</div>
 {% endblock %}
