--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,7 @@
 <body>
     <div class="container">
         <div class="row">
+            {% block menu %}{% endblock %}
             {% block body %}{% endblock %}
         </div>
     </div>
