--- a/templates/actualite/_form.html.twig
+++ b/templates/actualite/_form.html.twig
@@ -1,6 +1,4 @@
-<div class="col-12">
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-    {{ form_end(form) }}
-</div>
+{{ form_start(form) }}
+{{ form_widget(form) }}
+<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+{{ form_end(form) }}
