--- a/templates/actualite/show.html.twig
+++ b/templates/actualite/show.html.twig
@@ -1,38 +1,43 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
 {% block title %}Actualite{% endblock %}
 
 {% block body %}
-    <h1>Actualite</h1>
+<h1>Actualite</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ actualite.id }}</td>
-            </tr>
-            <tr>
-                <th>Titre</th>
-                <td>{{ actualite.Titre }}</td>
-            </tr>
-            <tr>
-                <th>UrlImage</th>
-                <td>{{ actualite.UrlImage }}</td>
-            </tr>
-            <tr>
-                <th>Texte</th>
-                <td>{{ actualite.Texte }}</td>
-            </tr>
-            <tr>
-                <th>Alt</th>
-                <td>{{ actualite.Alt }}</td>
-            </tr>
-        </tbody>
-    </table>
+<table class="table">
+    <tbody>
+        <tr>
+            <th>Id</th>
+            <td>{{ actualite.id }}</td>
+        </tr>
+        <tr>
+            <th>Titre</th>
+            <td>{{ actualite.Titre }}</td>
+        </tr>
+        <tr>
+            <th>UrlImage</th>
+            <td><img class="img-fluid" src="{{ actualite.UrlImage }}"></td>
+        </tr>
+        <tr>
+            <th>Accroche</th>
+            <td>{{ actualite.Accroche|raw }}</td>
+        </tr>
+        <tr>
+            <th>Texte</th>
+            <td>{{ actualite.Texte|raw }}</td>
+        </tr>
+        <tr>
+            <th>Alt</th>
+            <td>{{ actualite.Alt }}</td>
+        </tr>
+    </tbody>
+</table>
+<div class="row">
+    <a class="btn  btn-primary mr-2" href="{{ path('actualite_index') }}">Revenir à la liste</a>
 
-    <a href="{{ path('actualite_index') }}">back to list</a>
-
-    <a href="{{ path('actualite_edit', {'id': actualite.id}) }}">edit</a>
+    <a class="btn btn-secondary mr-2" href="{{ path('actualite_edit', {'id': actualite.id}) }}">Editer</a>
 
     {{ include('actualite/_delete_form.html.twig') }}
+</div>
 {% endblock %}
