--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -5,7 +5,7 @@
 {% block menu %}
 <div class="col-12">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Administration</a>
+        <a class="navbar-brand" href="/">Administration</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
