--- a/templates/actualite/new.html.twig
+++ b/templates/actualite/new.html.twig
@@ -1,15 +1,15 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}New Actualite{% endblock %}
+{% block title %}Nouvelle Actualite{% endblock %}
 
 {% block body %}
 <div class="row">
     <div class="col-12">
-        <h1>Create new Actualite</h1>
+        <h1>Créer une nouvelle actualité</h1>
 
         {{ include('actualite/_form.html.twig') }}
 
-        <a class="btn btn-secondary" href="{{ path('actualite_index') }}">back to list</a>
+        <a class="btn btn-secondary" href="{{ path('actualite_index') }}">Revenir à la liste</a>
     </div>
 </div>
 {% endblock %}
