--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Tous solidaire</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                    onclick="$('#solidaire_alert').hide()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
