--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,23 +41,31 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="collapsibleNavId">
+                        {% set route=path(app.request.attributes.get('_route'),
+                        app.request.attributes.get('_route_params')) %}
+                        <pre>
+                            {{ dump(route) }}
+                        </pre>
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="{{path('home')}}">Actualités</a>
+                                <a class="nav-link{% if route=='/'%} active {% endif %}"
+                                    href="{{path('home')}}">Actualités</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{path('avancees')}}">Avancées</a>
+                                <a class="nav-link {% if route=='/avancees'%} active {% endif %}"
+                                    href="{{path('avancees')}}">Avancées</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{path('vaccins')}}">Vaccination</a>
+                                <a class="nav-link {% if route=='/vaccins'%} active {% endif %}"
+                                    href="{{path('vaccins')}}">Vaccination</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                                <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                    <a class="dropdown-item" href="#">Action 1</a>
-                                    <a class="dropdown-item" href="#">Action 2</a>
-                                </div>
+                            <li class="nav-item">
+                                <a class="nav-link {% if route=='/solidaire'%} active {% endif %}"
+                                    href="{{path('solidaire')}}">Tous solidaire</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% if route=='/centre'%} active {% endif %}"
+                                    href="{{path('centre')}}">Trouver un centre</a>
                             </li>
                         </ul>
                         <form class="form-inline my-2 my-lg-0">
