feat:page solidaire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -69,8 +69,8 @@
                         {% if app.user %}
                         <form class="form-inline my-2 my-lg-0">
                             <span class="form-control mr-sm-2">{{app.user.nomprenom}}</span>
-                            <a href="{{path('app_logout')}}" class="btn btn-outline-success my-2 my-sm-0"
-                                type="button">Déconnexion</a>
+                            <a href="{{path('admin')}}" class="btn btn-outline-success my-2 my-sm-0"
+                                type="button">Administration</a>
                         </form>
 
                         {% else %}
