--- a/templates/home/solidaire.html.twig
+++ b/templates/home/solidaire.html.twig
@@ -17,6 +17,8 @@
         </div>
         <div class="col-10">
             <h4>Formulaire d'inscription</h4>
+            {{ include('inscription/_form.html.twig') }}
+
         </div>
 
     </div>
