--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,6 +15,7 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Accès à l'espace d'administration</h1>
+    <h2>Study Evaluation (les champs sont pré-remplis, merci de cliquer sur connexion)</h2>
     <label for="inputUsername">Identité</label>
     <input type="text" value="admin" name="username" id="inputUsername" class="form-control" required autofocus>
     <label for="inputPassword">Mot de passe</label>
