--- a/templates/home/centre.html.twig
+++ b/templates/home/centre.html.twig
@@ -74,10 +74,15 @@
     <div class="row">
         <div class="col-12">
             <h2>Localisation du centre le plus proche</h2>
-            <div class="form-inline">
-                <label for="">Merci d'entrer votre code postal</label>
-                <input type="text" class="form-control" name="" id="cp" aria-describedby="helpId" placeholder="17000">
-                <a name="" id="" class="btn btn-primary" onclick="cp_click()" role="button">Envoyer</a>
+            <div class="row justify-content-center">
+                <div class="col-8">
+                    <div class="form-inline align-content-around">
+                        <label for="">Merci d'entrer votre code postal</label>
+                        <input type="text" class="form-control" name="" id="cp" aria-describedby="helpId"
+                            placeholder="17000">
+                        <a name="" id="" class="btn btn-primary" onclick="cp_click()" role="button">Envoyer</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-12 col-lg-10">
