--- a/templates/home/centre.html.twig
+++ b/templates/home/centre.html.twig
@@ -78,8 +78,8 @@
                 <div class="col-8">
                     <div class="form-inline align-content-around">
                         <label for="">Merci d'entrer votre code postal</label>
-                        <input type="text" class="form-control" name="" id="cp" aria-describedby="helpId"
-                            placeholder="17000">
+                        <input type="text" class="form-control" name="" data-inputmask="'mask': '99999'" id="cp"
+                            aria-describedby="helpId" placeholder="17000">
                         <a name="" id="" class="btn btn-primary" onclick="cp_click()" role="button">Envoyer</a>
                     </div>
                 </div>
